# CommitCanvas

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  commitcanvas.sh  commitcanvas_check.py  commitcanvas_plugins.py  notes.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---documentation.md  ---feature-request.md  bug-report.md  documentation.md  feature-request.md  other.md
.github/workflows/: actions.yml  build.yml  release.yml
commitcanvas/: __init__.py  __main__.py  check.py  commit_message_checker.py  commitcanvas_check.py  default.py  fixes.py  get_staged_changes.py  hookspecs.py  host.py  lib.py  pickle_handler.py  pydriller_traverse.py  rules.py  train_spacy_model.py  traverse_repo.py  utils.py
commitcanvas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
commitcanvas/commit_label/: train_model.py  trained_model.pkl
commitcanvas/generate_msg/: commit_data.py  data_processing.py  notes.md  random_forest.py
commitcanvas/generate_msg/data/: languages.csv  repositories.txt  small_data.pkl  (+2 more)
commitcanvas/generate_type/: Notes.md  classify.py  commit_data.py  data_processing.py  detect_type.py  random_forest.py  tokenizers.py  train_model.py
commitcanvas/model/: meta.json  tokenizer
commitcanvas/spacy_training_data/: training_data.json
generate_type/: Notes.md  README.md  classify.py  commit_data.py  data_processing.py  detect_type.py  random_forest.py  stats.py
generate_type/data/: angular_repos.csv  collect_gatorgrader.ftr  conventional_repos.csv  labeled_repos.csv  languages.txt  new_repositories.csv  repositories.txt
generate_type/model/: trained_model.pkl
tests/: __init__.py  test_commit_canvas_check.py  test_commit_data.py  test_commit_message_checker.py  test_commitcanvas.py  test_data_processing.py  test_default.py  test_detect_type.py  test_get_staged_changes.py  test_host.py  test_utils.py
(+6 files in other folders)
