[tool.poetry]
name = "CommitCanvas"
version = "0.1.0"
description = ""
authors = ["bagashvilit <bagashvilit@allegheny.edu>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pre-commit = "^2.5.1"
spacy = "^2.3.2"
en_core_web_sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz" }
pyarrow = "^4.0.0"
typer = "^0.3.2"
nltk = "^3.6.2"
scikit-learn = "^0.24.2"
pandas = "^1.2.4"
# install the deployed model as a commitcanvas dependency
model = {url = "https://github.com/CommittedTeam/commitcanvas-models/releases/download/0.2.0/model-0.2.0.tar.gz"}
reporover = { git = "https://github.com/CommittedTeam/RepoRover"}
commitcanvas_models = { git = "https://github.com/CommittedTeam/commitcanvas-models"}

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-cov = "^2.10.0"
codecov = "^2.1.8"

[tool.poetry.scripts]
check = "commitcanvas.__main__:app"
commitcanvas = "commitcanvas.commit_label.train_model:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
