[tool.poetry]
name = "CommitCanvas"
version = "0.1.0"
description = ""
authors = ["bagashvilit <bagashvilit@allegheny.edu>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pre-commit = "^2.5.1"
typer = "^0.3.2"
pluggy = "1.0.0"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
check = "commitcanvas.host:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
