[tool.poetry]
name = "CommitCanvas"
version = "0.1.0"
description = ""
authors = ["bagashvilit <bagashvilit@allegheny.edu>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pluggy = "^1.0.0"
typer = "^0.4.1"
pre-commit = "^2.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"


[tool.poetry.scripts]
check = "commitcanvas.host:app"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
